force-app/main/default/objects/Social_Post_Author__c/Social_Post_Author__c.object-meta.xml
<CustomObject>
    <label>Social Post Author</label>
    <nameField>
        <displayFormat>SA-{YYYY}{MM}{0000}</displayFormat>
        <label>Social Post Author Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Post Authors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>