force-app/main/default/objects/Social_Post_Author__c/fields/Post_Author_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_Author_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Post Author ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>