force-app/main/default/objects/Social_Post_Author__c/fields/Post_Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Post_Author_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>