force-app/main/default/objects/Social_Post_Author__c/fields/Post_Author_Social_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_Author_Social_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Author Social ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>